# rustlang-primitives-test

./: .gitignore  Cargo.toml  Makefile  README.md
asset/: test.txt
examples/: test_debug_trait.rs  test_serde_json.rs  test_serde_serializable.rs
src/: main.rs
