[package]
name = "rustlang-primitives-test"
version = "0.1.0"
authors = ["polonaiz <polonaiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
md5 = "0.7.0"
itertools = "*"